--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <footer>
         footer here
     </footer>
-    <script src="main.js"></script>
+    <script src="script/js/main.js"></script>
 </body>
 </html>
