adding countUp things

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     </footer>
     <script src="js/main.js"></script>
     <script src="js/odometer.min.js"></script>
+    <script src="js/countUp.js"></script>
 </body>
 </html>
