--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             <span>{date}</span>
         </div>
         <div class="timer">
-            <span class="day odometer"></span>
-            <span class="hour odometer"></span>
-            <span class="minute odometer"></span>
-            <span class="second odometer"></span>
+            <span class="day odometer" id="day"></span>
+            <span class="hour odometer" id="hour"></span>
+            <span class="minute odometer" id="minute"></span>
+            <span class="second odometer" id="second"></span>
         </div>
     </div>
     <footer>
         footer here
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/countUp.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
     <script src="js/odometer.min.js"></script>
-    <script src="js/countUp.js"></script>
 </body>
 </html>
