reverted abck changes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <footer>
         footer here
     </footer>
-    <script src="js/countUp.js" type="module"></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/main.js"></script>
     <script src="js/odometer.min.js"></script>
 </body>
 </html>
