--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>countdown-timer | counts until the specific time</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/odometer-theme-minimal.css">
 </head>
 <body>
     <div class="container">
@@ -15,16 +14,15 @@
             <span>{date}</span>
         </div>
         <div class="timer">
-            <span class="day odometer" id="day"></span>
-            <span class="hour odometer" id="hour"></span>
-            <span class="minute odometer" id="minute"></span>
-            <span class="second odometer" id="second"></span>
+            <span class="day"></span>
+            <span class="hour"></span>
+            <span class="minute"></span>
+            <span class="second"></span>
         </div>
     </div>
     <footer>
         footer here
     </footer>
     <script src="./js/main.js"></script>
-    <script src="js/odometer.min.js"></script>
 </body>
 </html>
