fixed footer text side by side

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </div>
     </div>
     <footer>
-        footer here
+        <p>Andrei Berja 2021</p>
+        <p>countdown-timer</p>
     </footer>
     <script src="./js/main.js"></script>
 </body>
