changed some text

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="description">
-            <span>time until</span>
-            <span>{date}</span>
-        </div>
+        <div class="description"></div>
         <div class="timer">
             <span class="day"></span>
             <span class="hour"></span>
@@ -21,8 +18,8 @@
         </div>
     </div>
     <footer>
-        <p>Andrei Berja 2021</p>
-        <p>countdown-timer</p>
+        <p><a href="#">chocomilku</a> | 2021</p>
+        <p><a href="#">countdown-timer</a></p>
     </footer>
     <script src="./js/main.js"></script>
 </body>
