--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
     </div>
     <footer>
-        <p><a href="#">chocomilku</a> | 2021</p>
-        <p><a href="#">countdown-timer</a></p>
+        <p><a href="https://github.com/chocomilku">chocomilku</a> | 2021</p>
+        <p><a href="https://github.com/chocomilku/countdown-timer">countdown-timer</a></p>
     </footer>
     <script src="./js/main.js"></script>
 </body>
