added form to change date

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
         <div class="description"></div>
-        <div class="timer">
-            <span class="day"></span>
-            <span class="hour"></span>
-            <span class="minute"></span>
-            <span class="second"></span>
-        </div>
+        <div class="timer"></div>
+        <form action="">
+            <label for="date">Change Date:</label><br>
+            <input type="date" id="date" name="date" value="2021-09-01"><br>
+            <input type="submit" value="Change">
+        </form>
     </div>
     <footer>
         <p><a href="https://github.com/chocomilku">chocomilku</a> | 2021</p>
