added styles to form and added a new form

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         <div class="description"></div>
         <div class="timer"></div>
         <form action="">
-            <label for="date">Change Date:</label><br>
-            <input type="date" id="date" name="date" value="2021-09-01"><br>
+            <div class="date">
+                <label for="date">Change Date:</label><br>
+                <input type="date" id="date" name="date" value="2021-09-01"><br>
+            </div>
+            <div class="time">
+                <label for="time">Change Time:</label><br>
+                <input type="time" id="time" name="time" value="18:00"><br>
+            </div>
             <input type="submit" value="Change">
         </form>
     </div>
