added button for hiding options

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             </div>
             <div class="time">
                 <label for="time">Change Time:</label><br>
-                <input type="time" id="time" name="time" value="18:00"><br>
+                <input type="time" id="time" name="time" value="00:00"><br>
             </div>
             <input type="submit" value="Change">
         </form>
     </div>
     <footer>
+        <button class="button">Hide options</button>
         <p><a href="https://github.com/chocomilku">chocomilku</a> | 2021</p>
         <p><a href="https://github.com/chocomilku/countdown-timer">countdown-timer</a></p>
     </footer>
