added button function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="description"></div>
         <div class="timer"></div>
-        <form action="">
+        <form action="" class="changeDateTime">
             <div class="date">
                 <label for="date">Change Date:</label><br>
                 <input type="date" id="date" name="date" value="2021-09-01"><br>
@@ -24,7 +24,7 @@
         </form>
     </div>
     <footer>
-        <button class="button">Hide options</button>
+        <button class="button" onclick="buttonClick()">Hide Options</button>
         <p><a href="https://github.com/chocomilku">chocomilku</a> | 2021</p>
         <p><a href="https://github.com/chocomilku/countdown-timer">countdown-timer</a></p>
     </footer>
