made options hidden as default

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
     </div>
     <footer>
-        <button class="button" onclick="buttonClick()">Hide Options</button>
+        <button class="button" onclick="buttonClick()">Show Options</button>
         <p><a href="https://github.com/chocomilku">chocomilku</a> | 2021</p>
         <p><a href="https://github.com/chocomilku/countdown-timer">countdown-timer</a></p>
     </footer>
