implemented date and time changing without refreshing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="description"></div>
         <div class="timer"></div>
-        <form action="" class="changeDateTime">
+        <form action="#" class="form" onsubmit="enter(); return false">
             <div class="date">
                 <label for="date">Change Date:</label><br>
                 <input type="date" id="date" name="date" value="2021-09-01"><br>
